manifests/silver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silver
  namespace: silver
spec:
  selector:
    app: silver
  ports:
    - port: 80
      targetPort: 3001
