manifests/silver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silver
  namespace: silver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - silver.wuguishifu.dev
      secretName: silver-tls
  rules:
    - host: silver.wuguishifu.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silver
                port:
                  number: 80
